--- a/2/Games/src/main/resources/static/css/style.css
+++ b/2/Games/src/main/resources/static/css/style.css
@@ -1,4 +1,129 @@
-/* src/main/resources/static/css/style.css */
 body {
-    padding: 10px;
+    height: 100vh;
+    width: 100%;
+    background-image: url("../Imagem.png");
+    background-size: cover;
+}
+
+
+a {
+    color: #bebebe;
+    text-decoration: none;
+    transition: 0.3s;
+  }
+  
+  a:hover {
+    color: rgb(255, 255, 255);
+  }
+  
+  .logo {
+    font-size: 24px;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+  }
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
+    background: #101115;
+    height: 8vh;
+    margin-bottom: 100px;
+  }
+  
+  .nav-list {
+    margin: 0%;
+    list-style: none;
+    display: flex;
+  }
+  
+  .nav-list li {
+    letter-spacing: 1px;
+    margin-left: 72px;
+  }
+.cadastroh1 {
+    text-align: left;
+    color: white;
+    margin-bottom: 20px;
+    width: 100%;
+    font-family: "Mukta", sans-serif;
+    font-weight: 200;
+    font-style: normal;
+    font-weight: bold;
+}
+
+.container {
+    width: 100%;
+    height: 70vh;
+    width: 35%;
+ }
+
+.box {
+    width: 100%;
+    background-color: #181a21;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    border-radius: px;
+}
+
+#usernamelabel {
+    color: #1999ff;
+}
+
+.between {
+    font-size: 14px;
+    color: white;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+
+.form-control {
+    background-color: #32353c; 
+    color: #ffffff; 
+    border: 0px solid; 
+    border-radius: 0px;
+}
+
+.form-control:focus {
+    background-color: #393c44; 
+    color: #ffffff; 
+    outline: none; 
+    box-shadow: none; 
+}
+
+.form-control:hover {
+    background-color: #393c44;
+}
+
+.form-label {
+    color: #c7d5e0;
+}
+
+.btn-primary {
+    background: linear-gradient(45deg, #06bfff, #2c74ff); 
+    border: none;
+    color: #ffffff; 
+    border-radius: 2px;
+    padding: 10px 20px;
+}
+
+.btn-primary:hover {
+    background: linear-gradient(45deg, #3aceff, #2c74ff); 
+    color: #ffffff; 
+}
+
+.footer {
+    font-size: 14px;
+    color: #bebebe;
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    height: 12vh;
+    background-color: #181a21;
 }
